adding event service
