# zema_store_backend/src/routes/event.routes.ts
@@ -1,0 +1,16 @@
+import { Router } from "express";
+import {
+  createEvent,
+  deleteEvent,
+  getEvent,
+  getEvents,
+  updateEvent,
+} from "../controllers/event.controllers";
+
+const router = Router();
+
+router.route("/:id").get(getEvent).patch(updateEvent).delete(deleteEvent);
+
+router.route("/").get(getEvents).post(createEvent);
+
+export default (() => Router().use("/events", router))();
